# www-project

./: readme.md
warcaby/backend/: README.md  app.py  db.sqlite3  pyproject.toml  setup.sh  start.sh
warcaby/backend/insomnia/: Insomnia_2022-06-14.json
warcaby/backend/warcaby/: asgi.py  settings.py  urls.py  wsgi.py
warcaby/backend/warcaby/api/: apps.py  models.py  serializers.py
warcaby/backend/warcaby/api/migrations/: 0001_initial.py
warcaby/frontend/: README.md  app.js  checkers.css  checkers.html  index.html
zad6/react-app/src/: App.js  Link.js  Text.js
